FP-1082/FP-1083: Fix Color Contrast of Accent Color & Body Text (#452)
* FP-1083: Darker Body Color Text

- Remove comment for darkest text var.
- Use darkest text var.
- Darken current body text.

* FP-1083: Fix Accent Color (Weak) Value & Usage

- Use weak color variable when light is used incorrectly.
- Use weak color variable when color is used directly.
- Fix and document weak color.
- Uppercase and document light color.

* FP-1083: Use Accent Color Variable

- Use accent color variable when color is used directly.

* FP-1083: Document Accent Color (X-Light)

- Document x-light accent color.

* FP-1083: Drop Light & Rename X-Light Accent Color

- Replace last, incorrect instance of accent--light with accent--weak.
- Rename accent--x-light to accent--alt.

* FP-1083: Change Normal & Weak Accent Color (A11y)

- Use accent color that has passing accessible color contrast.\*

\* Except for <Message>'s. To be fixed in FP-1145.

* FP-1083: Explain absence of Design value #E6E0FB

- Add comment that explains why #E6E0FB is not used anymore.

* FP-1082: Do not let job hsitory modal override body text color

* FP-1082: Darken shared workspace desc text

Design request during review (via FP-1083) of this code (for FP-1082).

* Quick: Remove erroneous whitespace from c766551

* Noop: FP-1082: Note why colors differ from design

* FP-1083: Add color mapping from old to new

This is only needed as long as the Design document has not been updated:
- Wesley B has access and permission
- Matt S is aware of the need

* FP-1083: Fix sidebar link color contrast

- Update hover and active states to pass color contrast.

* FP-1083: Fix app sidebar link color contrast

- Update hover and active states to pass color contrast.

* FP-1083: Fix DF sidebar link color contrast

- Update hover and active states to pass color contrast.

* FP-1083: Fix Search sidebar link color contrast

- Update hover and active states to pas

--- a/client/src/components/DataFiles/DataFilesListing/DataFilesListingCells.scss
+++ b/client/src/components/DataFiles/DataFilesListing/DataFilesListingCells.scss
@@ -1,8 +1,8 @@
 .data-files-nav-link {
-  color: #9d85ef;
+  color: var(--global-color-accent--normal);
 }
 .data-files-nav-link:hover {
-  color: #9d85ef;
+  color: var(--global-color-accent--normal);
 }
 
 .data-files-name {
