--- a/client/src/components/Jobs/JobsSessionModal/JobsSessionModal.module.scss
+++ b/client/src/components/Jobs/JobsSessionModal/JobsSessionModal.module.scss
@@ -16,7 +16,7 @@
   border-radius: 0;
   align-self: center;
   font-size: 0.8rem;
-  background-color: #9D85EF;
+  background-color: var(--global-color-accent--normal);
   margin: 2rem 0;
 }
 .url {
