--- a/client/src/components/SiteSearch/SiteSearchListing/SiteSearchPaginator/SiteSearchPaginator.module.css
+++ b/client/src/components/SiteSearch/SiteSearchListing/SiteSearchPaginator/SiteSearchPaginator.module.css
@@ -1,9 +1,9 @@
 .paginator-link {
-  color: #9d85ef;
+  color: var(--global-color-accent--normal);
 }
 
 .active {
-  background-color: #9d85ef;
+  background-color: var(--global-color-accent--normal);
 }
 
 .active .paginator-link {
