--- a/client/src/components/Tickets/TicketsLayout.scss
+++ b/client/src/components/Tickets/TicketsLayout.scss
@@ -29,6 +29,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #9d85ef;
+  color: var(--global-color-accent--normal);
   padding: 30px;
 }
